sugarcrm/styleguide/less/clients/summer/components/record.less
.record {
    overflow: auto;
    margin-bottom: 16px;

    .icon-pencil {
        position: relative;
        top: -1px;
        left: 2px;
    }

    .normal {
        font-size: 160%;
    }

    .big {
        font-size: 260%;
        color: black;
    }

    .record-label {
        font-size: 80%;
        font-color: #666;
        text-transform: uppercase;
    }

    .row-fluid {
        margin: 6px 0;
    }

    .record-edit-link-wrapper {
        a {
            text-decoration: none;
            cursor: pointer;
        }
    }

    .record-cell {
        display: inline-block;
    }
}

